--- a/assets_/css/matrix-login.css
+++ b/assets_/css/matrix-login.css
@@ -52,6 +52,7 @@ body { background-color:#2E363F;    padding: 0;    margin-top:10%;}
 #loginbox .main_input_box { margin:0 auto; text-align:center; font-size:13px;}
 #loginbox .main_input_box .add-on{  padding:9px 9px; *line-height:31px; vertical-align:top; color:#fff;  width:30px; display:inline-block;}
 #loginbox .main_input_box input{ height:30px; vertical-align:top; border:0px; display:inline-block; width:75%; line-height:22px;  margin-bottom:3px;}
+#loginbox .main_input_box select{ height:38px; vertical-align:top; border:0px; display:inline-block; width:78%; line-height:22px;  margin-bottom:3px;margin-left: -3px;}
 #loginbox .controls{ padding:0 20px;}
 #loginbox .control-group{ padding:20px 0; margin-bottom:0px;}
 .form-vertical, .form-actions {  margin-bottom: 0; background:none; border-top:1px solid #3f4954; }
