--- a/assets_/css/matrix-login.css
+++ b/assets_/css/matrix-login.css
@@ -1,13 +1,13 @@
-html, body {    width: 100%; }
+html, body {    width: 100%;    height: 100%;}
 /*Bootstrap-overlay*/
 
 body {
-    overflow-x: hidden;
-    margin-top: -10px;  font-family: 'Open Sans', sans-serif; font-size:12px; color:#666;
+ overflow-x: hidden;
+ margin-top: -10px;  font-family: 'Open Sans', sans-serif; font-size:12px; color:#666;
 }
 a{color:#666;}
 a:hover, a:focus {
-    text-decoration: none; color:#28b779;
+ text-decoration: none; color:#28b779;
 }
 .dropdown-menu .divider{ margin:4px 0px;}
 .dropdown-menu{ min-width:180px;}
@@ -52,17 +52,16 @@ body { background-color:#2E363F;    padding: 0;    margin-top:10%;}
 #loginbox .main_input_box { margin:0 auto; text-align:center; font-size:13px;}
 #loginbox .main_input_box .add-on{  padding:9px 9px; *line-height:31px; vertical-align:top; color:#fff;  width:30px; display:inline-block;}
 #loginbox .main_input_box input{ height:30px; vertical-align:top; border:0px; display:inline-block; width:75%; line-height:22px;  margin-bottom:3px;}
-#loginbox .main_input_box select{ height:38px; vertical-align:top; border:0px; display:inline-block; width:78%; line-height:22px;  margin-bottom:3px;margin-left: -3px;}
 #loginbox .controls{ padding:0 20px;}
 #loginbox .control-group{ padding:20px 0; margin-bottom:0px;}
 .form-vertical, .form-actions {  margin-bottom: 0; background:none; border-top:1px solid #3f4954; }
 #loginbox .normal_text{ padding:15px 10px; text-align:center; font-size:14px; line-height:20px; background:#2E363F; color:#fff; }
 @media (max-width:800px){
-    #logo { width: 60%; }
-    #loginbox{ width:80%}
+#logo { width: 60%; }
+#loginbox{ width:80%}
 }
 @media (max-width: 480px){
-    #logo { width: 40%; }
-    #loginbox{ width:90%}
-    #loginbox .control-group{ padding:8px 0; margin-bottom:0px;}
+#logo { width: 40%; }
+#loginbox{ width:90%}
+#loginbox .control-group{ padding:8px 0; margin-bottom:0px;}
 }
