--- a/assets_/css/matrix-style.css
+++ b/assets_/css/matrix-style.css
@@ -53,12 +53,14 @@ hr{ border-top-color:#dadada;}
 	z-index: -9;
 }
 #header h1 {
-	background: url("../img/logo.png") no-repeat scroll 0 0 transparent;
+	//background: url("../img/logo.png") no-repeat scroll 0 0 transparent;
 	height: 31px;
 	left: 20px;
-	line-height: 600px;
-	overflow: hidden;
+	line-height: 10px;
+	//overflow: hidden;
 	position: relative;
+        font-size:32px;
+        color: #ffffcc;
 	top: 26px;
 	width: 191px;
 }
