--- a/assets_/css/matrix-login.css
+++ b/assets_/css/matrix-login.css
@@ -3,6 +3,7 @@ html, body {    width: 100%;    height: 100%;}
 
 body {
  overflow-x: hidden;
+ overflow-y: hidden;
  margin-top: -10px;  font-family: 'Open Sans', sans-serif; font-size:12px; color:#666;
 }
 a{color:#666;}
