--- a/assets_/css/mycss.css
+++ b/assets_/css/mycss.css
@@ -35,3 +35,20 @@
 .inTotalClasses{
 	cursor: pointer;
 }
+.view_invoice_0{
+     color: #808080; 
+     background: #f0f0f0;
+     color: #ff0000;
+     border-radius: 4px;
+     border: #A0A0A0 solid 1px;
+     padding: 1px 5px;
+     text-decoration: none !important;
+}
+.view_invoice_1{
+     color: #B0B0B0; 
+     background: #ffff00;
+     color: #ff0000;
+     border-radius: 4px;
+     border: #A0A0A0 solid 1px;
+     padding: 1px 5px;
+}
