--- a/assets_/css/mycss.css
+++ b/assets_/css/mycss.css
@@ -56,3 +56,13 @@
     pointer-events: none;
     opacity: 0.4;
 }
+.discount_lable{
+    background: #D9F3FF;
+    border: #202020 dotted 1px;
+    border-radius: 5px;
+    color: #033C78;
+    font-size: 10px;
+    float: left;
+    padding: 0px 2px;
+    margin: 2px;
+}
