--- a/assets_/css/mycss.css
+++ b/assets_/css/mycss.css
@@ -66,3 +66,10 @@
     padding: 0px 2px;
     margin: 2px;
 }
+.curr_class{
+    background: #ffff00; 
+    color: #0000EE; 
+    padding: 0px 3px;
+    border-radius: 5px;
+    border: #e0e0e0 solid 1px;
+}
